[gd_scene load_steps=50 format=3 uid="uid://cfivro2cvucyd"]

[ext_resource type="Script" uid="uid://dj5hi7veghggu" path="res://Scripts/SomethingWicked.gd" id="1_nhhmn"]
[ext_resource type="Script" uid="uid://d0l0mwpergp4w" path="res://Scripts/SiriAttack.gd" id="2_ssrd1"]
[ext_resource type="Texture2D" uid="uid://dhdrtria0w11k" path="res://Sprites/MC/jeffrey.png" id="3_nhhmn"]
[ext_resource type="Script" uid="uid://c1pr1j2axx4lm" path="res://Scripts/MC/jeffry.gd" id="4_ssrd1"]
[ext_resource type="AudioStream" uid="uid://b6o2lwyfadj0m" path="res://Music/1xx/100 Continue.ogg" id="6_thbw8"]
[ext_resource type="AudioStream" uid="uid://cf2o32vs5xb6e" path="res://Sounds/Dash.wav" id="9_78dv1"]
[ext_resource type="AudioStream" uid="uid://6vj1nwyobnfo" path="res://Sounds/untitled.wav" id="10_8kprs"]
[ext_resource type="Script" uid="uid://cswi8dc6b510a" path="res://Scripts/step.gd" id="11_vvvbw"]
[ext_resource type="AudioStream" uid="uid://dtrna5wav7pvs" path="res://Sounds/MC/Whoosh1.wav" id="12_mx6xa"]
[ext_resource type="Texture2D" uid="uid://532ci1mnwd3i" path="res://Sprites/MC/SIRI.png" id="13_f56q8"]
[ext_resource type="Shader" uid="uid://cie8slgga3ka4" path="res://Shaders/Flashing.gdshader" id="13_kfw33"]
[ext_resource type="AudioStream" uid="uid://dtyqf6s16v3y5" path="res://Sounds/hitHurt.wav" id="13_sn5hc"]
[ext_resource type="Texture2D" uid="uid://be5srm8cja3aa" path="res://Sprites/GroundPart.png" id="14_n4hwn"]
[ext_resource type="AudioStream" uid="uid://b6hhcruxv1j85" path="res://Sounds/Parry.wav" id="15_f56q8"]
[ext_resource type="Texture2D" uid="uid://csonpemk2p3s3" path="res://Other/curva.tres" id="15_fspmd"]
[ext_resource type="Script" uid="uid://cq5g7ixcdw21c" path="res://Scripts/camera_2d.gd" id="17_6gu3r"]
[ext_resource type="Texture2D" uid="uid://d2s6m8h7qakj" path="res://Sprites/MC/SiriNormal.png" id="17_nhhmn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2ori"]
size = Vector2(49, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gu3r"]
size = Vector2(18, 54)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nhhmn"]
particle_flag_align_y = true
particle_flag_disable_z = true
initial_velocity_max = 79.96
gravity = Vector3(0, 98, 0)
alpha_curve = ExtResource("15_fspmd")
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bcvmy"]
shader = ExtResource("13_kfw33")
shader_parameter/Flashing = false
shader_parameter/White = false

[sub_resource type="AtlasTexture" id="AtlasTexture_kfw33"]
atlas = ExtResource("13_f56q8")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcvmy"]
atlas = ExtResource("13_f56q8")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhhmn"]
atlas = ExtResource("13_f56q8")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssrd1"]
atlas = ExtResource("13_f56q8")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_snewb"]
atlas = ExtResource("13_f56q8")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sassj"]
atlas = ExtResource("13_f56q8")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5icb"]
atlas = ExtResource("13_f56q8")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_thbw8"]
atlas = ExtResource("13_f56q8")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpr58"]
atlas = ExtResource("13_f56q8")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkl2a"]
atlas = ExtResource("13_f56q8")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_78dv1"]
atlas = ExtResource("13_f56q8")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kprs"]
atlas = ExtResource("13_f56q8")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvvbw"]
atlas = ExtResource("13_f56q8")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx6xa"]
atlas = ExtResource("13_f56q8")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn5hc"]
atlas = ExtResource("13_f56q8")
region = Rect2(512, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4hwn"]
atlas = ExtResource("13_f56q8")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fspmd"]
atlas = ExtResource("13_f56q8")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2ori"]
atlas = ExtResource("13_f56q8")
region = Rect2(256, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gu3r"]
atlas = ExtResource("13_f56q8")
region = Rect2(384, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgnqx"]
atlas = ExtResource("13_f56q8")
region = Rect2(512, 384, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_fgnqx"]
animations = [{
"frames": [{
"duration": 0.25,
"texture": SubResource("AtlasTexture_kfw33")
}, {
"duration": 0.25,
"texture": SubResource("AtlasTexture_bcvmy")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_nhhmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssrd1")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_snewb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sassj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5icb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thbw8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpr58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkl2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78dv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kprs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvvbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx6xa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn5hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4hwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fspmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2ori")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gu3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgnqx")
}],
"loop": true,
"name": &"run",
"speed": 30.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kfw33"]
shader = ExtResource("13_kfw33")
shader_parameter/Flashing = false
shader_parameter/White = false

[sub_resource type="CanvasTexture" id="CanvasTexture_bcvmy"]
diffuse_texture = ExtResource("13_f56q8")
normal_texture = ExtResource("17_nhhmn")

[sub_resource type="Animation" id="Animation_ssrd1"]
resource_name = "Attack"
length = 0.26667002
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 1]
}

[sub_resource type="Animation" id="Animation_nhhmn"]
resource_name = "Idle"
length = 1.0333368
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.53333336, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_bcvmy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("footstepart:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kfw33"]
resource_name = "Run"
length = 0.80000335
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2, 0.26666668, 0.33333334, 0.4, 0.46666667, 0.53333336, 0.6, 0.6666667, 0.73333335),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("footstepart:emitting")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.13333334, 0.53333336),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nhhmn"]
_data = {
&"Attack": SubResource("Animation_ssrd1"),
&"Idle": SubResource("Animation_nhhmn"),
&"RESET": SubResource("Animation_bcvmy"),
&"Run": SubResource("Animation_kfw33")
}

[node name="Node2D" type="Node2D"]

[node name="UwUGG" type="CharacterBody2D" parent="."]
z_index = 1
position = Vector2(320, 301)
collision_layer = 16385
collision_mask = 15
safe_margin = 0.001
script = ExtResource("1_nhhmn")

[node name="Area2D" type="Area2D" parent="UwUGG"]
scale = Vector2(-1, 1)
collision_mask = 2590
monitoring = false
script = ExtResource("2_ssrd1")

[node name="HitArea" type="CollisionShape2D" parent="UwUGG/Area2D"]
position = Vector2(-15.5, -4.5)
shape = SubResource("RectangleShape2D_g2ori")

[node name="jeffrey" type="Sprite2D" parent="UwUGG/Area2D"]
visible = false
position = Vector2(72, -5)
rotation = 3.1415882
texture = ExtResource("3_nhhmn")
script = ExtResource("4_ssrd1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UwUGG"]
shape = SubResource("RectangleShape2D_6gu3r")

[node name="DASHTIME" type="Timer" parent="UwUGG"]
wait_time = 0.1
one_shot = true

[node name="DashRegen" type="Timer" parent="UwUGG"]
one_shot = true

[node name="DashRegen2" type="Timer" parent="UwUGG"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="CoreRegen" type="Timer" parent="UwUGG"]
wait_time = 2.0
one_shot = true

[node name="ПервыйПлеер" type="AudioStreamPlayer" parent="UwUGG"]
stream = ExtResource("6_thbw8")
bus = &"Music"

[node name="OSTimer" type="Timer" parent="UwUGG"]
wait_time = 10.67
one_shot = true

[node name="SoundPlayerMC" type="AudioStreamPlayer2D" parent="UwUGG"]
stream = ExtResource("9_78dv1")
bus = &"SFX"

[node name="Step" type="AudioStreamPlayer2D" parent="UwUGG"]
stream = ExtResource("10_8kprs")
volume_db = 24.0
max_polyphony = 5
bus = &"SFX"
script = ExtResource("11_vvvbw")

[node name="Whoosh" type="AudioStreamPlayer2D" parent="UwUGG"]
stream = ExtResource("12_mx6xa")
bus = &"SFX"

[node name="Hit" type="AudioStreamPlayer2D" parent="UwUGG"]
stream = ExtResource("13_sn5hc")
bus = &"SFX"

[node name="footstepart" type="GPUParticles2D" parent="UwUGG"]
texture_filter = 1
position = Vector2(0, 26)
rotation = -1.5708
emitting = false
amount = 4
texture = ExtResource("14_n4hwn")
lifetime = 0.3
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_nhhmn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UwUGG" groups=["Flashable"]]
visible = false
material = SubResource("ShaderMaterial_bcvmy")
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_fgnqx")
animation = &"run"
frame = 1
frame_progress = 0.36372584
speed_scale = 0.5

[node name="Parry" type="AudioStreamPlayer" parent="UwUGG"]
stream = ExtResource("15_f56q8")
bus = &"SFX"

[node name="Coyote" type="Timer" parent="UwUGG"]
wait_time = 0.05
one_shot = true

[node name="Animations" type="Sprite2D" parent="UwUGG"]
texture_filter = 1
material = SubResource("ShaderMaterial_kfw33")
position = Vector2(0, -5.0000076)
texture = SubResource("CanvasTexture_bcvmy")
hframes = 5
vframes = 5
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="UwUGG"]
libraries = {
&"": SubResource("AnimationLibrary_nhhmn")
}

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 2
position = Vector2(320, 180)
script = ExtResource("17_6gu3r")

[node name="Panel" type="Panel" parent="Camera2D"]
visible = false
offset_left = -321.0
offset_top = 114.0
offset_right = 319.0
offset_bottom = 180.0

[node name="Label" type="Label" parent="Camera2D/Panel"]
layout_mode = 0
offset_top = 21.0
offset_right = 640.0
offset_bottom = 44.0
text = "Не пытайся бежать."
horizontal_alignment = 1

[connection signal="body_entered" from="UwUGG/Area2D" to="UwUGG/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="UwUGG/Area2D" to="UwUGG/Area2D" method="_on_body_exited"]
[connection signal="timeout" from="UwUGG/DASHTIME" to="UwUGG" method="_on_dashtime_timeout"]
[connection signal="timeout" from="UwUGG/DashRegen" to="UwUGG" method="_on_dash_regen_timeout"]
[connection signal="timeout" from="UwUGG/DashRegen2" to="UwUGG" method="_on_dash_regen_2_timeout"]
[connection signal="timeout" from="UwUGG/CoreRegen" to="UwUGG" method="_on_core_regen_timeout"]
[connection signal="finished" from="UwUGG/Step" to="UwUGG/Step" method="_on_finished"]
[connection signal="animation_finished" from="UwUGG/AnimatedSprite2D" to="UwUGG/Area2D" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="UwUGG/Coyote" to="UwUGG" method="_on_coyote_timeout"]
[connection signal="animation_finished" from="UwUGG/AnimationPlayer" to="UwUGG/Area2D" method="_on_animation_player_animation_finished"]
